--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,10 @@
 [build]
   command = "npm run build"
   publish = "dist"
+  functions = "netlify/functions"
+
+[build.environment]
+  NODE_VERSION = "18"
 
 [[redirects]]
   from = "/*"
@@ -8,9 +12,4 @@
   status = 200
 
 [functions]
-  directory = "netlify/functions"
   node_bundler = "esbuild"
-
-[[functions]]
-  path = "/.netlify/functions/generate-video-background"
-  included_files = ["automation/**"]
